--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>BigScreen</title>
   </head>
-  <body style="transform: scale(0.8);">
+  <body>
     <noscript>React Big Screen With DataV</noscript>
     <div id="root"></div>
     <!--
