--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.67" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -26,7 +26,7 @@
     -->
     <title>BigScreen</title>
   </head>
-  <body style="transform: scale(0.5);">
+  <body>
     <noscript>React Big Screen With DataV</noscript>
     <div id="root"></div>
     <!--
