--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BigScreen</title>
+    <title>业聘数据大屏</title>
   </head>
   <body style="zoom: 0.67;">
-    <noscript>React Big Screen With DataV</noscript>
+    <noscript>此为加密数据,谨慎对外公开!</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
